--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   </head>
   <body>
     <main class="main">
-      <!-- ------------CARD JEREMY------------ -->
       <section class="user">
         <div class="user__info">
           <div class="info-img-box">
@@ -53,7 +52,6 @@
       </section>
 
       <section class="cards-container">
-        <!-- ------------CARD WORK------------ -->
         <div class="card-box">
           <div class="card-box--blue">
             <div class="card__header">
@@ -71,7 +69,6 @@
           </div>
         </div>
 
-        <!-- ------------CARD PLAY------------ -->
         <div class="card-box">
           <div class="card-box--blue">
             <div class="card__header">
@@ -89,7 +86,6 @@
           </div>
         </div>
 
-        <!-- ------------CARD STUDY------------ -->
         <div class="card-box">
           <div class="card-box--blue">
             <div class="card__header">
@@ -107,7 +103,6 @@
           </div>
         </div>
 
-        <!-- ------------CARD EXERCISE------------ -->
         <div class="card-box">
           <div class="card-box--blue">
             <div class="card__header">
@@ -125,7 +120,6 @@
           </div>
         </div>
 
-        <!-- ------------CARD SOCIAL---------- -->
         <div class="card-box">
           <div class="card-box--blue">
             <div class="card__header">
@@ -143,7 +137,6 @@
           </div>
         </div>
 
-        <!-- ------------CARD SELF CARE------------ -->
         <div class="card-box">
           <div class="card-box--blue">
             <div class="card__header">
@@ -163,13 +156,15 @@
       </section>
     </main>
 
-    <!-- ------------FOOTER------------ -->
     <footer class="footer">
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/alexcarmonadev" target="_blank">Alexcarmonadev</a>.
+        >. Coded by
+        <a href="https://github.com/alexcarmonadev" target="_blank"
+          >Alexcarmonadev</a
+        >.
       </div>
     </footer>
     <script src="js/scripts.js"></script>
